# ads-compaign-metric

./: .gitignore  PORTS.md  PROJECT_PLAN.md  QUICK_CHART_SETUP.md  QUICK_DASHBOARD_SETUP.md  README.md  create_charts.sh  docker-compose.yml  env.example  pyproject.toml  render_mermaid.sh  setup_dashboard.sh  setup_sample_data.sql  start_sql_client.sh  superset_setup_guide.md
config/flink/: flink-conf.yaml
config/superset/: dashboard_config.json  superset_config.py
docs/: README.md  architecture_diagram.md  data_sync_strategies.md  flink_iceberg_concepts.md  implementation_summary.md  item6_superset_dashboard_summary.md  superset_dashboard_guide.md
sql_examples/: 01_create_tables.sql  02_insert_data.sql  03_query_examples.sql  04_schema_evolution.sql  05_time_travel.sql
src/: __init__.py  config.py  flink_examples.py  iceberg_examples.py  iceberg_sql_setup.py  kafka_setup.py  models.py
src/flink/: __init__.py  data_enrichment.py  iceberg_sink.py  metrics_aggregation.py  streaming_pipeline.py
src/kafka/: __init__.py  consumer.py  dlq_consumer.py  producer.py  topics.py
src/superset/: dashboard_setup.py  simple_chart_creator.py  simple_dashboard_setup.py
tests/: __init__.py  test_iceberg_catalog_template.sql  test_iceberg_complete_template.sql
